fixed some broken styles and menu bug

--- a/myApp/scss/ionic.app.scss
+++ b/myApp/scss/ionic.app.scss
@@ -80,7 +80,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 #changePeriod {
   .list{
     z-index:11;
-    top:44px;
+    top:-4px;
     overflow: hidden;
   }
   .item{
